infrastructure/apps/tunneld/tunneld-wg-svc.yaml
# tunneld-wg-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: tunneld-wg
  namespace: coder
spec:
  type: LoadBalancer
  internalTrafficPolicy: Cluster
  ipFamilyPolicy: SingleStack
  ports:
  - port: 54321
    protocol: UDP
    name: wg
    targetPort: 54321
  selector:
    app: tunneld
